--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,8 @@ script:
   - RAILS_ENV=test bundle exec rake db:migrate --trace
   - bundle exec rake db:test:prepare
   - bundle exec rspec -fd spec/
+
+  deploy:
+    provider: heroku
+    api_key: "e19026459846b805e845af949f7caed846ab68fe"
+    run: "rake db:migrate"
