trying to fix travis deployment

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,5 @@ script:
 
 deploy:
   provider: heroku
+  api_key: e19026459846b805e845af949f7caed846ab68fe
   app: stark-oasis-9187
-  api_key: "e19026459846b805e845af949f7caed846ab68fe"
-  run: "rake db:migrate"
