--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,14 @@
 language: ruby
+
 rvm:
-- 2.1.0
+- 2.0.0
+
+script:
+- bundle exec rake db:migrate --trace
+- RAILS_ENV=test bundle exec rake db:migrate --trace
+- bundle exec rake db:test:prepare
+- bundle exec rspec -fd spec/
+
 deploy:
   provider: heroku
   api_key:
